90% of scripts done. Local storage script left to do.

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <a href="#" class="navbar_item">О галерее</a>
     </nav>
     <form class="search" id="search">
-      <input type="text" class="search_field" placeholder="Поиск по названия картины">
+      <input type="text" class="search_field" placeholder="Поиск по названию картины">
       <input type="submit" class="search_submit" value="Найти">
     </form>
   </div>
@@ -37,7 +37,7 @@
             <h6 class="discount">2 000 000 $</h6>
             <h6 class="price">1 000 000 $</h6>
           </div>
-          <button class="buy-button">Купить</button>
+          <button class="buy normal">Купить</button>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
           <div class="pricebox">
             <h6 class="price">3 000 000 $</h6>
           </div>
-          <button class="buy-button">Купить</button>
+          <button class="buy normal">Купить</button>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
             <h6 class="discount">6 000 000 $</h6>
             <h6 class="price">5 000 000 $</h6>
           </div>
-          <button class="buy-button">Купить</button>
+          <button class="buy normal">Купить</button>
         </div>
       </div>
     </div>
@@ -85,7 +85,7 @@
 <!--            <h6 class="discount">2 000 000 $</h6>-->
 <!--            <h6 class="price">1 000 000 $</h6>-->
           </div>
-<!--          <button class="buy-button">Купить</button>-->
+<!--          <button class="buy">Купить</button>-->
         </div>
       </div>
     </div>
